# ChangeLog for dev-embedded/mios-studio-bin
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $


*mios-studio-bin-2.4.6 (11 Dec 2013)
  11 Dec 2013; Xavier Miller <alchemist@tuxfamily.org>: initial version