@@ -1,4 +1,4 @@
 DIST MIOS_Studio_2_4_6.tar.gz 1867946 SHA256 deafc03a8836f778df5222652b847879624f795a9b5722169a634c8ba66bc210 SHA512 f694929cc3f160531e2761ec3a8a5d80e878cae672f73c04f535d2de4ddb15345af849bbe8863bb965393e0d717837913517cb6261a6eaa3ab3af982a9882b98 WHIRLPOOL 5ae40bcb88fea483212e5524d60050ac84b787663cc5aaec220d4f10cbcd9442f0bd426b1557ee807027a39649dc32867e9a335fd6d12e7b69fbd908508814a7
-EBUILD mios-studio-bin-2.4.6.ebuild 751 SHA256 b87bf9bf7b3b7db16c5c70e68d7bd7b46c23f38502f5feb3b3d1ef02fe634526 SHA512 8bf9c059f56c4a9297d687677c51dc5c83b51dc370f949ce63c856ef8b3166aedb4ca18b21cc61558e79aff82c5affad4d06959b4a247efcb236220e3b3bcb7a WHIRLPOOL 653d9d19d58b17902b2c87ead9eae65173d5c1ce8ed86d7cf1ea1ce54c85673c676f1567c6c795f3957868870a0e3641f2f6625a3a99a7f05f5d5643ac386304
-MISC ChangeLog 239 SHA256 39db4871801d6ba6a53b57043dffe916ce2bf9512cb734a886f91f482ec9a606 SHA512 2ccb36ee8d6c97c3ef1c2470cb66dec0b7360edb24605f3c4444a24f756e7516642c4072e3cd906156a93be4fb080786e9f75180b877057a98896a7e28b6d224 WHIRLPOOL 4971113c74ff1f58223f34783cff9ccfe3f52a2234e6a8723fc3f13c5e56de37f14f242ca6e86d0d8cfffa0cbb6dfc0f20723100b55430aaaad62a2c77881adc
+EBUILD mios-studio-bin-2.4.6.ebuild 740 SHA256 797a96bff4f943b22038b5d12b9dfae7caa2d4506868603c466f596c83d7bc4a SHA512 c1ea81e2af9a303d97e67acda7a21e41b0c8e487fe738e41084b58beb425331f57db134edfaab020e4eca7209ac6f61671b7360a813430ac33105112dba7e775 WHIRLPOOL b120d4ef05e223369e6db72eb7d4f42417d98bd1e906a290e5995375f174a4555d959019396081679a3cc5b839d20afc9c3b1d3385fa5d51dfaf244713a784b2
+MISC ChangeLog 388 SHA256 54cec6b7380d9367668f6305252dd596d15cc8c82bed5750b08eda188f4d124a SHA512 f521b576ef8d22d8ac7287f833027dd00db5cecf427bfc011f433450be462276ef0bec5e70c148d05989ee13293345ddf529b2748521d0c801e82241e47874e5 WHIRLPOOL 440cb088a3e603760801df7fc36c3a1219bbc6247b67152f8cdbe2a39b819f1010517bffec2f8eac44eb7321643da7f2886a15c235b6b491ea0b56ed25533995
 MISC metadata.xml 248 SHA256 9c5ccf0c3efacb4c86185deb0f1e3a7bc81a754003b6815d8d2b1d04372aa381 SHA512 1eaac7eb2c67e8a167746d908d17688b5c312622daa5a429b8d1d18b237623dbec85e5dcf3aad7c81a6dcf12744bad53e21c638d126ff1d9575ff7b274677ac7 WHIRLPOOL 9eda3824e3e2a1dc79d95f89b1700afd0bb440df9c229b8437fc04357f860d1bf3c7e2732ad0f59db54c97629befecbc3ce15857ab1c55f4bca9c12feb0a5409
