@@ -1,0 +1,3 @@
+EBUILD mios-studio-9999.ebuild 956 SHA256 651895e711a02775b32ce8a1dd13c411fb2df1e631c6fe5814f93e7705e66c59 SHA512 6faea754247bfd465392c94b148d21de1151b9a2bb99ff1625988be412b9528255bdc723aa3f1e7bc4509b03a3b1498b4e1f32606153c689628b4ea8e2e3d478 WHIRLPOOL 400baffb80dacf548d7f4c797b460ab4e1b6397c86f9a76595ce3bcf3380034f57a88464870636cb24a050f27606c094f60d5d7279b354610e99ff397ee5a208
+MISC ChangeLog 230 SHA256 acb8b0394b4aa9200426df70a968e09ef91ee8c2dbdf20f8527debfce19eb900 SHA512 1b0e893589ff9aa1741b588f0992388993e62c68ba39e438e757cea8600c664ec735e9e11eeab8fec634cea4ec3a922f2755646611f5c3220614964be82df334 WHIRLPOOL f8e801e83f724186b383eb5fc91543705050dc8c633d72e3fd2683ac4dbf8dfe668429a9ec163b879ef7b98f166c01ea08acf12de52d04aa8625b2393671fd6c
+MISC metadata.xml 248 SHA256 9c5ccf0c3efacb4c86185deb0f1e3a7bc81a754003b6815d8d2b1d04372aa381 SHA512 1eaac7eb2c67e8a167746d908d17688b5c312622daa5a429b8d1d18b237623dbec85e5dcf3aad7c81a6dcf12744bad53e21c638d126ff1d9575ff7b274677ac7 WHIRLPOOL 9eda3824e3e2a1dc79d95f89b1700afd0bb440df9c229b8437fc04357f860d1bf3c7e2732ad0f59db54c97629befecbc3ce15857ab1c55f4bca9c12feb0a5409
