@@ -1,0 +1,8 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
+<pkgmetadata>
+	<maintainer>
+	  <email>proaudio@tuxfamily.org</email>
+	  <name>pro-audio overlay team</name>
+	</maintainer>
+</pkgmetadata>
