@@ -1,0 +1,7 @@
+# ChangeLog for dev-embedded/mios-studio
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: $
+
+
+*mios-studio-9999 (29 Dec 2013)
+  29 Dec 2013; Xavier Miller <alchemist@tuxfamily.org>: initial version
