@@ -3,5 +3,9 @@
 # $Header: $
 
 
+*mios-studio-bin-2.4.6 (29 Dec 2013)
+  29 Dec 2013; Xavier Miller <alchemist@tuxfamily.org>: added licence +
+	licence file (which is like free/OSS)
+
 *mios-studio-bin-2.4.6 (11 Dec 2013)
   11 Dec 2013; Xavier Miller <alchemist@tuxfamily.org>: initial version
